fixed spacing and media queries

--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,3 +1,7 @@
 @media only screen and (min-width: 32.5em) {
+    header, footer {border-radius: 15px;}
+    
+    main {margin-left: 5%;}
+
 
 }
